--- a/sass/knet/_feature.scss
+++ b/sass/knet/_feature.scss
@@ -11,7 +11,7 @@ $feature-grad   : color(-25% lighter $blue),
 .feature {
   @extend %container;
   @include pie-clearfix;
-  @include rhythm-padding(3.5,3);
+  @include rhythm-padding(4,3);
   @include background(
     linear-gradient(to top, $feature-shadow...) no-repeat scroll,
     linear-gradient(to bottom right, $feature-grad...) no-repeat fixed
@@ -32,16 +32,27 @@ $feature-offset: 3%;
 
 .feature-links { @include pad(rhythm(1)); }
 
-.feature-title { @extend %sub-title; }
+.feature-title {
+  @extend %sub-title;
+  @include trailer(0);
+}
 
 .feature-block {
-  @include rhythm-borders(1px, 1.5);
-  @include box-shadow($base 0 0 3px inset);
-  float: left;
-  width: span(percentage(1/3) - $feature-offset);
-  margin-right: -200%;
-  background: color(white, .8);
-  border-color: $base;
+  #{$link} {
+    @include rhythm-borders(1px, 1.5);
+    @include box-shadow($base 0 0 3px inset);
+    float: left;
+    width: span(percentage(1/3) - $feature-offset);
+    margin-right: -200%;
+    background: color(white, .8);
+    color: $base;
+    border-color: $base;
+    text-align: center;
+  }
+
+  #{$focus} {
+    color: $accent;
+  }
 
   &.pyo {
     @include border-left-radius(rhythm(.25));
@@ -51,14 +62,12 @@ $feature-offset: 3%;
   &.consult {
     @include adjust-font-size-to($medpx);
     @include leader(-1);
-    @include h-borders(1px, 2);
     @include box-shadow($base 0 0 6px);
     @include transition(all 300ms);
     position: relative;
     width: span(percentage(1/3) + ($feature-offset * 2));
     margin-left: percentage(1/3) - $feature-offset;
     background: color(white, .85);
-    color: $accent;
     z-index: 10;
 
     #{$focus} {
@@ -73,4 +82,27 @@ $feature-offset: 3%;
     margin-right: 0;
     border-left: 0;
   }
+
+  [class^="icon-"] {
+    @include trailer(.5);
+    display: block;
+    text-align: center;
+  }
 }
+
+.icon-consult {
+  @include adjust-font-size-to($xxxlargepx);
+  @include icon(cord);
+  color: $accent;
+}
+.icon-pyo {
+  @include adjust-font-size-to($xxlargepx);
+  @include icon(bubbles);
+  color: $alt;
+}
+.icon-tcs {
+  @include adjust-font-size-to($xxlargepx);
+  @include icon(bubble-heart);
+  color: $alt;
+}
+
