--- a/sass/knet/_contentinfo.scss
+++ b/sass/knet/_contentinfo.scss
@@ -1,12 +1,17 @@
 // Content Info
 // ============
 
+$footer-back: color($base 85%);
 $footer-base: color(light $base);
 
 [role="contentinfo"] {
   @extend %container;
-  @include rhythm-padding(.5);
-  background: color(85%, .8);
+  @include leading-border(2px,1);
+  @include padding-trailer(1);
+  position: relative;
+  background: $footer-back;
+  border-color: $footer-base;
+  z-index: 40;
 }
 
 .info {
