add scrollTo for .home local-links

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
 {% compressed_css "knet" %}
 {% endblock styles %}
 
+{% block bodyclasses %}home{% endblock %}
+
 {% block banner %}
 <div class="banner-wrap">
   {{ block.super }}
