update :target css to .target

--- a/static/css/knet.css
+++ b/static/css/knet.css
@@ -1256,7 +1256,7 @@ html {
   display: table;
   clear: both;
 }
-.what:target, .who:target, .why:target {
+.target.what, .target.who, .target.why {
   -webkit-animation: pulse 600ms 600ms 1;
   -moz-animation: pulse 600ms 600ms 1;
   -o-animation: pulse 600ms 600ms 1;
