Use KNet lightbulb for consulting icon

--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -19,7 +19,7 @@ $icon-heart:          "\e00e";
 $icon-quote-right:    "\f10e";
 $icon-arrow-up:       "\e00f";
 $icon-bubbles:        "\e010";
-$icon-cord:           "\e011";
+$icon-bulb:           "\e011";
 
 // Debug
 $debug: append($debug, icons);
@@ -42,7 +42,7 @@ $debug-icons: 'search'          $icon-search,
               'quote-right'     $icon-quote-right,
               'arrow-up'        $icon-arrow-up,
               'bubbles'         $icon-bubbles,
-              'cord'            $icon-cord;
+              'bulb'            $icon-bulb;
 
 @mixin debug-icons {
   @debug '# Icons';
