--- a/templates/home.html
+++ b/templates/home.html
@@ -29,8 +29,7 @@
       <span class="icon-consult"></span>
       <h2 class="feature-title">Training & Technology</h2>
       <p>
-        Consulting services
-        that engage students,
+        Helping you engage students,
         personalize learning,
         and reduce teacher&nbsp;burdens.
       </p>
