New Knet favicon

--- a/templates/stories/layout.html
+++ b/templates/stories/layout.html
@@ -2,6 +2,8 @@
 
 {% load accounts teachers %}
 
+{% block favicon %}tcs-favicon.ico{% endblock favicon %}
+
 {% block banner %}
 <h1 class="brand vcard">
   <a href="{% url 'landing' %}" rel="home" class="fn org">The K Network</a>
