--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
   {% endblock mobile-optimized %}
 
   <!-- favicon.ico -->
-  <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" />
+  <link rel="shortcut icon" href="{{ STATIC_URL }}images/{% block favicon %}favicon.ico{% endblock favicon %}" />
 
   {% block styles %}
   {% compressed_css "screen" %}
