Minor text adjustments

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
       <p>
         Helping you engage students,
         personalize learning,
-        and reduce teacher&nbsp;burdens.
+        and reduce classroom&nbsp;burdens.
       </p>
     </a>
     <a href="http://portfoliyo.org/" class="pyo feature-block">
@@ -45,7 +45,7 @@
       <span class="icon-tcs"></span>
       <h2 class="feature-title">Teacher Stories</h2>
       <p>
-        Inspiring stories from the lives you've&nbsp;changed.
+        Inspiring messages from the lives you've&nbsp;changed.
       </p>
     </a>
   </div>
